--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@forge/bridge": "4.3.0",
+    "@forge/events": "^0.9.7",
     "@forge/react": "10.10.3",
     "@forge/resolver": "1.6.5-next.0",
     "react": "^18.2.0"
