fetch worklogs in consumer

--- a/manifest.yml
+++ b/manifest.yml
@@ -28,6 +28,9 @@ modules:
 resources:
   - key: main
     path: src/frontend/index.jsx
+permissions:
+  scopes:
+    - read:jira-work
 app:
   runtime:
     name: nodejs22.x
