--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-plugin-react-hooks": "^4.6.0"
   },
   "dependencies": {
+    "@forge/api": "^4.2.0",
     "@forge/bridge": "4.3.0",
     "@forge/events": "^0.9.7",
     "@forge/react": "10.10.3",
