--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@forge/events": "^0.9.7",
     "@forge/react": "10.10.3",
     "@forge/resolver": "1.6.5-next.0",
+    "@forge/sql": "^2.3.1",
     "react": "^18.2.0"
   }
 }
