--- a/manifest.yml
+++ b/manifest.yml
@@ -14,6 +14,8 @@ modules:
       handler: index.handler
     - key: onInstall
       handler: index.onInstall
+    - key: onWorklogCreateFunction
+      handler: index.onWorklogCreate
     - key: consumer-function
       handler: consumer.handler
       timeoutSeconds: 600
@@ -22,6 +24,10 @@ modules:
       function: onInstall
       events:
         - avi:forge:installed:app
+    - key: onWorklogCreate
+      function: onWorklogCreateFunction
+      events:
+        - avi:jira:created:worklog
   consumer:
     - key: worklog-fetch
       queue: worklog-fetch
